@@ -1,5 +1,9 @@
 2002-10-02  Nathanael Nerode  <neroden@gcc.gnu.org>
 
+	* Makefile.def: Remove order dependency comments.
+	* Makefile.tpl: Add explicit install-install dependencies.
+	* Makefile.in: Regenerate.
+
 	* Makefile.tpl: Remove material now in src-release.  (Finally!)
 	* Makefile.in: Regenerate.
 
